[gd_scene load_steps=8 format=3 uid="uid://bdtasqg7jopxq"]

[ext_resource type="MeshLibrary" uid="uid://bj17kykibxjj" path="res://tile/tiles.tres" id="1_u70e4"]
[ext_resource type="Script" path="res://tiles.gd" id="2_lhfeb"]
[ext_resource type="PackedScene" uid="uid://bxn666m5c7d2s" path="res://player.tscn" id="2_w1phr"]
[ext_resource type="Script" path="res://checkTile.gd" id="3_ayx7a"]
[ext_resource type="MeshLibrary" uid="uid://7f3qwq03o3kd" path="res://tile/select.tres" id="4_bn6e7"]
[ext_resource type="Script" path="res://facingtile.gd" id="5_jlcgw"]

[sub_resource type="BoxShape3D" id="BoxShape3D_judpj"]
size = Vector3(0.95, 0.95, 0.95)

[node name="worldTest" type="Node3D"]

[node name="tiles" type="GridMap" parent="."]
mesh_library = ExtResource("1_u70e4")
cell_size = Vector3(1, 1, 1)
data = {
"cells": PackedInt32Array(-1, 65535, 1, -65536, 65535, 1, -65536, 0, 1, -1, 0, 1, -1, 1, 1, -1, 2, 1, -65536, 2, 1, -65535, 2, 1, -65534, 2, 1, -65534, 1, 1, -65534, 0, 1, -65534, 65535, 1, -65535, 65535, 1, -65535, 1, 1, -65536, 1, 1, -65535, 0, 1, -2, 2, 1, -3, 2, 1, -4, 2, 1, -5, 2, 1, -2, 0, 1, -3, 1, 1, -5, 1, 1, -5, 0, 1, -4, 1, 1, -3, 0, 1, -4, 0, 1, -2, 1, 1, -5, 65534, 1, -4, 65534, 1, -3, 65534, 1, -2, 65534, 1, -1, 65534, 1, -65536, 65534, 1, -65535, 65534, 1, -65534, 65534, 1, -65535, 65533, 1, -65534, 65533, 1, -65536, 65533, 1, -1, 65533, 1, -2, 65533, 1, -65534, 65532, 1, -65535, 65532, 1, -65536, 65532, 1, -1, 65532, 1, -2, 65532, 1, -2, 65531, 1, -1, 65531, 1, -65536, 65531, 1, -65535, 65531, 1, -65534, 65531, 1, -3, 65533, 1, -4, 65533, 1, -5, 65533, 1, -5, 65532, 1, -5, 65531, 1, -3, 65531, 1, -3, 65532, 1, -4, 65532, 1, -4, 65531, 1, -2, 65535, 1, -3, 65535, 1, -4, 65535, 1, -5, 65535, 1, 2, 2, 0, 1, 2, 0, 0, 2, 0, 65535, 2, 0, 65534, 2, 0, 65533, 2, 0, 65532, 2, 0, 65531, 2, 0, 65531, 1, 0, 65531, 0, 0, 65531, 65535, 0, 65531, 65534, 0, 65532, 65534, 0, 65532, 65533, 0, 65532, 65532, 0, 65531, 65532, 0, 65531, 65531, 0, 65531, 65533, 0, 2, 1, 0, 1, 1, 0, 0, 1, 0, 65535, 1, 0, 65534, 1, 0, 65533, 1, 0, 65532, 1, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 2, 65535, 0, 2, 65534, 0, 1, 65534, 0, 1, 65533, 0, 1, 65532, 0, 1, 65531, 0, 2, 65531, 0, 2, 65532, 0, 2, 65533, 0, 1, 65535, 0, 0, 65535, 0, 0, 65534, 0, 0, 65533, 0, 0, 65532, 0, 0, 65531, 0, 65535, 65535, 0, 65534, 65535, 0, 65533, 65535, 0, 65532, 65535, 0, 65532, 65531, 0, 65533, 65531, 0, 65533, 65532, 0, 65533, 65533, 0, 65533, 65534, 0, 65534, 65534, 0, 65534, 65533, 0, 65534, 65532, 0, 65534, 65531, 0, 65535, 65531, 0, 65535, 65532, 0, 65535, 65533, 0, 65535, 65534, 0, 3, 65531, 0, 4, 65531, 0, 5, 65531, 0, 6, 65531, 0, 7, 65531, 0, 8, 65531, 0, 9, 65531, 0, 10, 65531, 0, 10, 65532, 0, 10, 65533, 0, 10, 65534, 0, 10, 65535, 0, 10, 0, 0, 10, 1, 0, 10, 2, 0, 9, 2, 0, 8, 2, 0, 7, 2, 0, 6, 2, 0, 5, 2, 0, 4, 2, 0, 3, 2, 0, 3, 1, 0, 3, 0, 0, 3, 65535, 0, 3, 65534, 0, 3, 65533, 0, 4, 65533, 0, 4, 65532, 0, 5, 65532, 0, 3, 65532, 0, 6, 65532, 0, 7, 65532, 0, 8, 65532, 0, 9, 65532, 0, 9, 65533, 0, 9, 65534, 0, 9, 65535, 0, 9, 0, 0, 9, 1, 0, 8, 1, 0, 7, 1, 0, 6, 1, 0, 5, 1, 0, 4, 1, 0, 4, 0, 0, 4, 65535, 0, 4, 65534, 0, 5, 65533, 0, 6, 65533, 0, 7, 65533, 0, 8, 65533, 0, 8, 65535, 0, 8, 0, 0, 8, 65534, 0, 7, 65535, 0, 6, 65535, 0, 7, 65534, 0, 6, 65534, 0, 6, 0, 0, 5, 65535, 0, 5, 0, 0, 5, 65534, 0, 7, 0, 0, -65526, 65531, 1, -65527, 65531, 1, -65528, 65531, 1, -65529, 65531, 1, -65530, 65531, 1, -65531, 65531, 1, -65531, 65532, 1, -65532, 65532, 1, -65532, 65531, 1, -65533, 65531, 1, -65533, 65532, 1, -65530, 65532, 1, -65529, 65532, 1, -65528, 65532, 1, -65527, 65532, 1, -65526, 65532, 1, -65526, 65533, 1, -65527, 65533, 1, -65528, 65533, 1, -65529, 65533, 1, -65530, 65533, 1, -65531, 65533, 1, -65532, 65533, 1, -65533, 65533, 1, -65526, 65534, 1, -65526, 65535, 1, -65526, 0, 1, -65526, 1, 1, -65526, 2, 1, -65527, 2, 1, -65528, 2, 1, -65529, 2, 1, -65530, 2, 1, -65531, 2, 1, -65532, 2, 1, -65533, 2, 1, -65533, 1, 1, -65533, 0, 1, -65533, 65535, 1, -65533, 65534, 1, -65532, 65534, 1, -65531, 65534, 1, -65530, 65534, 1, -65529, 65534, 1, -65528, 65534, 1, -65527, 65534, 1, -65527, 65535, 1, -65527, 0, 1, -65527, 1, 1, -65528, 1, 1, -65528, 0, 1, -65529, 0, 1, -65530, 0, 1, -65531, 0, 1, -65531, 1, 1, -65532, 1, 1, -65530, 1, 1, -65529, 1, 1, -65532, 0, 1, -65532, 65535, 1, -65531, 65535, 1, -65530, 65535, 1, -65529, 65535, 1, -65528, 65535, 1, 65544, 65534, 2, 65543, 65534, 2, 65543, 65533, 2, 65544, 65533, 2, 65544, 65535, 2, 65543, 65535, 2, 65543, 0, 2, 65544, 0, 2)
}
script = ExtResource("2_lhfeb")
metadata/_editor_floor_ = Vector3(0, 1, 0)

[node name="checkTile" type="Area3D" parent="tiles"]
script = ExtResource("3_ayx7a")

[node name="colshape" type="CollisionShape3D" parent="tiles/checkTile"]
shape = SubResource("BoxShape3D_judpj")

[node name="Player" parent="." instance=ExtResource("2_w1phr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)

[node name="facingtile" type="GridMap" parent="."]
mesh_library = ExtResource("4_bn6e7")
cell_size = Vector3(1, 1, 1)
script = ExtResource("5_jlcgw")
metadata/_editor_floor_ = Vector3(0, 1, 0)

[connection signal="giveTilePos" from="tiles" to="facingtile" method="_on_tiles_give_tile_pos"]
[connection signal="testforCol" from="tiles" to="tiles/checkTile" method="_on_tiles_testfor_col"]
[connection signal="placeTheBloodyTile" from="tiles/checkTile" to="tiles" method="_on_check_tile_place_the_bloody_tile"]
[connection signal="breakTile" from="Player" to="tiles" method="_on_player_break_tile"]
[connection signal="getTile" from="Player" to="tiles" method="_on_player_get_tile"]
[connection signal="givePos" from="Player" to="tiles" method="_on_player_give_pos"]
[connection signal="placeTile" from="Player" to="tiles" method="_on_player_place_tile"]
